# powerdns-gerd

./: .gitignore  .gitlab-ci.yml  LICENSE  README.md  cabal.project  default.nix  dynamic.nix  flake.nix  hie.yaml  local.nix  powerdns-gerd.cabal  powerdns-gerd.conf.example  powerdns-guard.cabal  powerdns-guard.conf.example  project.nix  shell.nix  static.nix  test.nix
.ci/: Dockerfile  Dockerfile.builder  ci.cabal.project  entrypoint.sh  pdns.conf  static.cabal.project
app/: Main.hs
app/PowerDNS/Guard/: API.hs  Account.hs  Config.hs  Options.hs  Server.hs  Types.hs  Utils.hs
lib/PowerDNS/Gerd/: API.hs  CmdConfig.hs  CmdConfigValidate.hs  CmdDigest.hs  CmdServer.hs  CmdVersion.hs  Config.hs  Options.hs  Permission.hs  Server.hs  Types.hs  User.hs  Utils.hs
lib/PowerDNS/Gerd/Permission/: Optics.hs  Types.hs
lib/PowerDNS/Gerd/Server/: Endpoints.hs
lib/PowerDNS/Gerd/User/: Optics.hs  Types.hs
lib/PowerDNS/Guard/: API.hs  Config.hs  Options.hs  Permission.hs  Server.hs  Types.hs  User.hs  Utils.hs
lib/PowerDNS/Guard/Account/: Types.hs
lib/PowerDNS/Guard/Permission/: Types.hs
lib/PowerDNS/Guard/User/: Types.hs
nix/: sources.json
powerdns-gerd.materialized/: default.nix
powerdns-gerd.materialized/.plan.nix/: powerdns-gerd.nix
test/: Spec.hs  Utils.hs  default.nix  powerdns-gerd.test.conf  powerdns-guard.test.conf
