cabal-version:      3.0
name:               powerdns-gerd
version:            0.1.0.0
maintainer:         dminuoso+git@icloud.com

extra-source-files: CHANGELOG.md

common all
    build-depends:    base ^>= { 4.12.0.0, 4.14.1.0 }
    ghc-options:      -Wall -Werror=incomplete-patterns -fno-warn-unticked-promoted-constructors
    default-language: Haskell2010

common exes
    ghc-options:      -rtsopts -threaded -with-rtsopts=-qg

test-suite powerdns-gerd-test
    import:           all, exes
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs
    other-modules:    Utils
    hs-source-dirs:   test
    ghc-options:      -threaded -with-rtsopts=-qg
    build-depends:    HUnit
                    , tasty
                    , tasty-hunit
                    , servant-client
                    , servant-client-core
                    , http-client
                    , http-types
                    , powerdns
                    , powerdns-gerd-lib
                    , text
                    , warp
                    , wai-extra
                    , call-stack

executable powerdns-gerd
    import:           all, exes
    main-is:          Main.hs
    build-depends:  , powerdns-gerd-lib
                    , warp
    hs-source-dirs:   app
    default-language: Haskell2010

library powerdns-gerd-lib
    import:           all
    exposed-modules:  PowerDNS.Gerd.Options
                      PowerDNS.Gerd.Server
                      PowerDNS.Gerd.Config
                      PowerDNS.Gerd.Utils

    other-modules:    PowerDNS.Gerd.API
                      PowerDNS.Gerd.User
                      PowerDNS.Gerd.User.Types
                      PowerDNS.Gerd.Types
                      PowerDNS.Gerd.Permission
                      PowerDNS.Gerd.Permission.Types
                      Paths_powerdns_gerd

    build-depends:    attoparsec
                    , bytestring
                    , config-schema
                    , gitrev
                    , libsodium
                    , monad-logger
                    , mtl
                    , http-client
                    , http-client-tls
                    , optparse-applicative
                    , powerdns
                    , pretty
                    , servant
                    , servant-client
                    , servant-client-core
                    , servant-server
                    , containers
                    , text
                    , transformers
                    , unliftio
                    , wai
                    , warp
                    , http-types
    hs-source-dirs:  lib
