cabal-version:      3.0
name:               powerdns-gerd
version:            0.1.0.0
maintainer:         dminuoso+git@icloud.com

extra-source-files: CHANGELOG.md

common all
    build-depends:    base ^>= { 4.12.0.0, 4.14.1.0 }
                    , warp ^>= 3.3.18
    ghc-options:      -Wall -Werror=incomplete-patterns -fno-warn-unticked-promoted-constructors
    default-language: Haskell2010

common exes
    ghc-options:      -rtsopts -threaded -with-rtsopts=-qg

test-suite powerdns-gerd-test
    import:           all, exes
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs
    other-modules:    Utils
    hs-source-dirs:   test
    ghc-options:      -threaded -with-rtsopts=-qg
    build-depends:    HUnit
                    , tasty
                    , tasty-hunit
                    , servant-client
                    , servant-client-core
                    , http-client
                    , http-types
                    , powerdns
                    , powerdns-gerd-lib
                    , text
                    , wai-extra
                    , call-stack

executable powerdns-gerd
    import:           all, exes
    main-is:          Main.hs
    build-depends:  , powerdns-gerd-lib
    hs-source-dirs:   app
    default-language: Haskell2010

library powerdns-gerd-lib
    import:           all
    exposed-modules:  PowerDNS.Gerd.Options
                      PowerDNS.Gerd.Server
                      PowerDNS.Gerd.Config
                      PowerDNS.Gerd.CmdDigest
                      PowerDNS.Gerd.CmdConfigValidate
                      PowerDNS.Gerd.Utils

    other-modules:    PowerDNS.Gerd.API
                      PowerDNS.Gerd.User
                      PowerDNS.Gerd.User.Types
                      PowerDNS.Gerd.Types
                      PowerDNS.Gerd.Permission
                      PowerDNS.Gerd.Permission.Types
                      Paths_powerdns_gerd

    build-depends:    attoparsec ^>= 0.14.2
                    , bytestring ^>= 0.10.12
                    , config-schema ^>= 1.2.2
                    , containers ^>= 0.6.2
                    , gitrev ^>= 1.3.1
                    , http-client ^>= 0.7.9
                    , http-client-tls ^>= 0.3.5
                    , http-types ^>= 0.12.3
                    , libsodium ^>= 1.0.18
                    , monad-logger ^>= 0.3.36
                    , mtl ^>= 2.2.2
                    , optparse-applicative ^>= 0.16.1
                    , powerdns ^>= 0.2.0
                    , pretty ^>= 1.1.3
                    , servant ^>= 0.18.3
                    , servant-client ^>= 0.18.3
                    , servant-client-core ^>= 0.18.3
                    , servant-server ^>= 0.18.3
                    , text ^>= 1.2.4
                    , transformers ^>= 0.5.6
                    , unliftio ^>= 0.2.20
                    , wai ^>= 3.2.3
    hs-source-dirs:  lib
