cabal-version:      3.0
name:               powerdns-gerd
version:            0.1.1
maintainer:         dminuoso+git@icloud.com
license:            BSD-3-Clause
license-file:       LICENSE

extra-source-files: CHANGELOG.md

common all
    build-depends:    base ^>= { 4.12.0.0, 4.14.1.0, 4.15.0.0, 4.16.0.0 }
                    , powerdns ^>= 0.4.0
    ghc-options:      -Wall -Werror=incomplete-patterns -fno-warn-unticked-promoted-constructors -fno-warn-unused-do-bind
    default-language: Haskell2010

common exes
    ghc-options:      -rtsopts -threaded -with-rtsopts=-qg

common warp
    build-depends:    warp ^>= { 3.3.17, 3.3.18 }

test-suite powerdns-gerd-test
    import:           all, exes, warp
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs
    other-modules:    Utils
    hs-source-dirs:   test
    ghc-options:      -threaded -with-rtsopts=-qg
    build-depends:    HUnit
                    , tasty
                    , tasty-hunit
                    , servant-client
                    , servant-client-core
                    , http-client
                    , http-types
                    , powerdns-gerd-lib
                    , text
                    , unliftio
                    , monad-logger
                    , wai-extra
                    , call-stack

executable powerdns-gerd
    import:           all, exes
    main-is:          Main.hs
    build-depends:  , powerdns-gerd-lib
    hs-source-dirs:   app
    default-language: Haskell2010

library powerdns-gerd-lib
    import:           all, warp
    exposed-modules:  PowerDNS.Gerd.Options
                      PowerDNS.Gerd.Server
                      PowerDNS.Gerd.Server.Endpoints
                      PowerDNS.Gerd.Config
                      PowerDNS.Gerd.CmdDigest
                      PowerDNS.Gerd.CmdConfig
                      PowerDNS.Gerd.CmdVersion
                      PowerDNS.Gerd.CmdServer
                      PowerDNS.Gerd.Utils

    other-modules:    PowerDNS.Gerd.API
                      PowerDNS.Gerd.User
                      PowerDNS.Gerd.User.Types
                      PowerDNS.Gerd.Types
                      PowerDNS.Gerd.Permission
                      PowerDNS.Gerd.Permission.Types
                      Paths_powerdns_gerd

    build-depends:    attoparsec ^>= 0.14.2
                    , bytestring ^>= 0.10.12
                    , config-schema ^>= 1.2.2
                    , config-value ^>= 0.8.0
                    , containers ^>= 0.6.2
                    , gitrev ^>= 1.3.1
                    , http-client ^>= 0.7.9
                    , http-client-tls ^>= 0.3.5
                    , http-types ^>= 0.12.3
                    , libsodium ^>= 1.0.18
                    , monad-logger ^>= 0.3.36
                    , mtl ^>= 2.2.2
                    , optparse-applicative ^>= 0.16.1
                    , template-haskell ^>= { 2.16.0, 2.17.0.0, 2.18.0.0 }
                    , pretty ^>= 1.1.3
                    , servant ^>= { 0.18.3, 0.19 }
                    , servant-client ^>= { 0.18.3, 0.19 }
                    , servant-client-core ^>= { 0.18.2, 0.19 }
                    , servant-server ^>= { 0.18.2, 0.19 }
                    , text ^>= 1.2.4
                    , transformers ^>= 0.5.6
                    , unliftio ^>= 0.2
                    , unix ^>= 2.7.2
                    , wai ^>= 3.2.3
                    , iproute ^>= 1.7.12
                    , dns-patterns ^>= 0.1
    hs-source-dirs:  lib
