cabal-version:      2.4
name:               powerdns-guard
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:

-- The package author(s).
-- author:
maintainer:         dminuoso+git@icloud.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable powerdns-guard
    main-is:          Main.hs
                      

    -- Modules included in this executable, other than Main.
    other-modules:    PowerDNS.Guard.API
                      PowerDNS.Guard.Account
                      PowerDNS.Guard.Server
                      PowerDNS.Guard.Types
                      PowerDNS.Guard.Utils
                      PowerDNS.Guard.Config
                      PowerDNS.Guard.Options
                      PowerDNS.Guard.Permission

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.1.0
                    , bytestring
                    , config-schema
                    , libsodium
                    , monad-logger
                    , mtl
                    , http-client
                    , http-client-tls
                    , optparse-applicative
                    , powerdns
                    , pretty
                    , servant
                    , servant-client
                    , servant-client-core
                    , servant-server
                    , containers
                    , text
                    , transformers
                    , unliftio
                    , wai
                    , warp
                    , http-types
    hs-source-dirs:   app
    default-language: Haskell2010
