cabal-version:      2.4
name:               powerdns-guard
version:            0.1.0.0
maintainer:         dminuoso+git@icloud.com

extra-source-files: CHANGELOG.md

common all
    build-depends:    base ^>=4.14.1.0
    ghc-options:      -Wall -Werror=incomplete-patterns -fno-warn-unticked-promoted-constructors
    default-language: Haskell2010

common exes
    ghc-options:      -rtsopts -threaded -with-rtsopts=-qg

test-suite powerdns-guard-test
    import:           all, exes
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs
    other-modules:    Utils
    hs-source-dirs:   test
    ghc-options:      -threaded -with-rtsopts=-qg
    build-depends:    HUnit
                    , tasty
                    , tasty-hunit
                    , servant-client
                    , servant-client-core
                    , http-client
                    , http-types
                    , powerdns
                    , powerdns-guard-lib
                    , text
                    , warp
                    , wai-extra
                    , call-stack

executable powerdns-guard
    import:           all, exes
    main-is:          Main.hs
    build-depends:  , powerdns-guard-lib
                    , warp
    hs-source-dirs:   app
    default-language: Haskell2010

library powerdns-guard-lib
    import:           all
    exposed-modules:  PowerDNS.Guard.Options
                      PowerDNS.Guard.Server
                      PowerDNS.Guard.Config

    other-modules:    PowerDNS.Guard.API
                      PowerDNS.Guard.Account
                      PowerDNS.Guard.Account.Types
                      PowerDNS.Guard.Types
                      PowerDNS.Guard.Utils
                      PowerDNS.Guard.Permission
                      PowerDNS.Guard.Permission.Types

    build-depends:    attoparsec
                    , bytestring
                    , config-schema
                    , libsodium
                    , monad-logger
                    , mtl
                    , http-client
                    , http-client-tls
                    , optparse-applicative
                    , powerdns
                    , pretty
                    , servant
                    , servant-client
                    , servant-client-core
                    , servant-server
                    , containers
                    , text
                    , transformers
                    , unliftio
                    , wai
                    , warp
                    , http-types
    hs-source-dirs:  lib
